I have done this extension basically!

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,5 +1,5 @@
 {
-	"nameNoTM": {"message": "Checker Plus for Google Drive"},
+	"nameNoTM": {"message": "Save Pages to Google Drive"},
 	"description": {"message": "Quickly browse your Google Drive files without opening a webpage and get notifications of modifications to your shared documents"},
 
 	"today": {"message": "Today"},
